[package]
name = "rankigi-proxy"
version = "0.1.0"
edition = "2021"
description = "RANKIGI Universal Proxy Interceptor — captures AI agent HTTP traffic and submits tamper-evident chain events without agent code changes."
license = "MIT"

[[bin]]
name = "rankigi-proxy"
path = "src/main.rs"

[lib]
name = "rankigi_proxy"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging"] }
rcgen = "0.13"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
url = "2"
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
base64 = "0.22"
pkcs8 = "0.10"
dns-lookup = "2"
regex = "1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }
wiremock = "0.6"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
